# uniflow

./: .env.example  .gitignore  README.md  config.py  main.py  package.txt  pyproject.toml
ai/: orchestrator.py
ai/agents/: agent1.py  agent2.py  agent3.py  deps.py
ai/parse_document/: __init__.py  parse.py
ai/prompts/: __init__.py  agent1_position_analyst.md  agent2_advisor.md  agent3_interview_coach.md  retrierver_prompt.md
app/: config.py  main.py  runner.py  sidebar.py
app/panels/: __init__.py  benchmark.py  courses.py  events.py  interview.py
docs/: CURRENT_CODE_CONTEXT.md  UniFlow_AI_Blueprint_v3.md
pages/: 1_📊_Benchmark.py  2_📚_Course_Roadmap.py  3_🗓️_Events.py  4_🎤_Interview_Coach.py
retrieval/data/processed/: courses.json  requirements.json
retrieval/src/: chunker.py  ingest.py  main.py  retriever.py  vector_store.py
schemas/: agent1.py  agent2.py  agent3.py  inputs.py  report.py  retrieval.py
tests/: test_retrieval.py  test_retriever_mock.py
