[project]
name = "uniflow-hackathon-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.1",
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.9",
    "pydantic-ai[google-vertex,openai]>=1.62.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
    "streamlit>=1.54.0",
]
